# EspruinoS3

./: README.md
libs/filesystem/: jswrap_file.h  jswrap_fs.c
libs/network/esp32/: jswrap_esp32_network.c
make/esp32idf4/: CMakeLists.txt
make/esp32idf4/main/: CMakeLists.txt
make/esp32s3idf4/: Makefile  partitions_in_R4.csv  sdkconfig
targets/esp32/: jshardware.c  jshardwareAnalog.c  jshardwarePWM.c  jshardwareSpi.c  rtosutil.c
